# my_deep_learning_from_scratch

./: Makefile  README.md  pyproject.toml
.github/workflows/: test.yaml
NLP/common/: utils.py
basic_nn/: layered_neural_network.py  main.py  simple_net.py  simple_neural_network.py
basic_nn/common/: functions.py  gradient.py  layered_network.py  layers.py  optimizer.py  simple_net.py
basic_nn/common/layers/: layers.py  type.py
common/: functions.py
data/: cifar.py  display.py
