[tool.poetry]
name = "my-deep-learning-from-scratch"
version = "0.1.0"
description = ""
authors = ["Rei Tsukada <rayzou1120@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.2"
requests = "^2.31.0"
pydantic = "^2.6.1"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
types-requests = "^2.31.0.20240218"
bidict = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
